# platformer

./: CMakeLists.txt
source/: Colliding.cpp  Colliding.h  Object.cpp  Object.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Square.cpp  Square.h  constants.h  main.cpp
